# AI_Agency_OS

./: .gitignore  README.md  app.py  main.py  market_news_cache.json  pyproject.toml  workspaces.db
.streamlit/: config.toml
Database/: db.py
agents/: market_news.py
agents/agent_tools/: tools.py
ai_agents/: campaign.py  clients.py  competitor.py  market_news.py  outreach_agent.py  research.py  test.py
ai_agents/agent_tools/: tools.py
ai_agents/prompts/: prompts.py
ai_agents/schemas/: schemas.py
components/: Content_studio.py  campaign_comp.py  competitor_comp.py  dashboard_comp.py  marketing_comp.py  outreach_comp.py  research_comp.py  workspace_comp.py
pages/: Create_workspace.py  competitior.py  content_studio.py  dashboard.py  marketing.py  outreach.py  research.py
utils/: pdf_gen.py  text_gen.py
