[project]
name = "ai-agency-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf2>=2.8.7",
    "lucide-py>=0.3.5",
    "openai-agents>=0.18.0",
    "streamlit>=1.59.0",
    "streamlit-antd-components>=0.3.2",
    "tavily-python>=0.7.26",
]
